# atomic_fact

./: .gitignore  PLAN.md  README.md  aliases.toml  main.py  pyproject.toml
.kiro/steering/: product.md  structure.md  tech.md
scripts/: entity_network.py
src/atomic_fact/: __init__.py  aliases.py  chunker.py  cli.py  cluster.py  extractor.py  models.py  reader.py  scoring.py  viewer.py
tests/: test_cli.py  test_extractor.py  test_models.py  test_reader.py  test_scoring.py
