[project]
name = "atomic-fact"
version = "0.1.0"
description = "Extract atomic facts from text documents using LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.2",
    "langchain>=1.2.15",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.31.0",
    "pydantic>=2.12.5",
]

[project.scripts]
atomic-fact = "atomic_fact.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atomic_fact"]
